# mlflow-tutorial

./: .gitignore  Dockerfile.jupyter  README.md  docker-compose.yaml  local_run.py  main.ipynb  pyproject.toml  tox.ini
notebooks/: main.ipynb
notebooks/src/core/: fetch.py  ml.py
notebooks/src/models/: classifier.py  data.py  regressor.py
notebooks/src/services/: data_fetch.py  pipeline.py
src/core/: _mlflow.py  components.py  dataprep.py  fetch.py  gridsearch.py  ml.py  settings.py  switcher.py  trainer.py  tuner.py
src/custom/: dataprep.py  plots.py  richer.py  trainer.py  tuner.py
src/models/: classifier.py  data.py  params.py  regressor.py
src/services/: data_fetch.py  pipeline.py  plots.py
tests/services/: test_pipeline.py
