[tool.poetry]
name = "mlflow-tutorial"
version = "0.1.0"
description = "A mlflow tutorial for education purposes"
authors = ["Alefe Almeida <alefeofdealmeida@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mlflow = "^2.21.0"
kaleido = "0.2.1"
boto3 = "^1.37.18"
jupyter = "^1.1.1"
pycaret = {version = "^3.3.2", python = ">=3.12,<3.13"}

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
pytest-mock = "^3.10.0"
mypy = "^1.3.0"
isort = "^5.12.0"
black = "^23.3.0"
tox = "^4.6.4"
flake8 = "^6.1.0"
flake8-bugbear = "^23.9.16"
flake8-quotes = "^3.3.2"
flake8-pytest = "^1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
