[project]
name = "mlflow-tutorial"
version = "0.1.0"
description = "mlflow tutorial for educational purposes"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.37.23",
 "jupyterlab>=4.3.6",
 "mlflow>=2.21.2",
 "pydantic>=2.11.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.11.2",
    "tox>=4.25.0",
]
