[project]
name = "mlflow-tutorial"
version = "0.1.0"
description = "mlflow tutorial for educational purposes"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.37.23",
    "jupyterlab>=4.3.6",
    "kaggle>=1.7.4.2",
    "mlflow>=2.21.2",
    "pydantic>=2.11.1",
    "python-dotenv>=1.1.0",
    "rich>=14.0.0",
    "scikit-learn>=1.6.1",
    "scikit-optimize>=0.10.2",
    "seaborn>=0.13.2",
    "xgboost>=3.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.11.2",
    "tox>=4.25.0",
]
